Fixed homepage promo spacing in IE8 - no nth child

--- a/src/public/sass/layout/_ie8.scss
+++ b/src/public/sass/layout/_ie8.scss
@@ -12,6 +12,12 @@
         line-height:28px;
     }
 
+    .dealer-promo {
+        @include bp($foundation-large) {
+            margin-right:4%;
+        }
+    }
+
     form {
         .columns {
             padding-left:15px;
